fix label gap

--- a/src/components/options/options.module.scss
+++ b/src/components/options/options.module.scss
@@ -9,6 +9,7 @@
 
   @include mobile {
     margin: 32px;
+    row-gap: 32px;
   }
 }
 
